@@ -115,7 +115,7 @@ void g_mime_part_set_pre_encoded_content (GMimePart *mime_part, const char *cont
 /*void g_mime_part_set_content_stream (GMimePart *mime_part, GMimeStream *content);*/
 
 void g_mime_part_set_content_object (GMimePart *mime_part, GMimeDataWrapper *content);
-const GMimeDataWrapper *g_mime_part_get_content_object (const GMimePart *mime_part);
+GMimeDataWrapper *g_mime_part_get_content_object (const GMimePart *mime_part);
 const char *g_mime_part_get_content (const GMimePart *mime_part, size_t *len);
 
 /* utility functions */
